Fix text align to start

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -59,3 +59,7 @@
 // .vp-page-meta {
 //   margin-inline: unset;
 // }
+
+.theme-hope-content:not(.custom) > p {
+  text-align: start;
+}
